# documented

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  rustfmt.toml
.github/: dependabot.yml
.github/scripts/: generate-lockfile.sh
.github/workflows/: ci.yaml  publish.yaml
derive/: Cargo.toml
derive/src/: lib.rs
documented-derive/: Cargo.toml
documented-derive/src/: config.rs  lib.rs
documented-macros/: Cargo.toml
documented-macros/src/: attr_impl.rs  config.rs  derive_impl.rs  lib.rs  util.rs
documented-macros/src/config/: attr.rs  customise_core.rs  derive.rs  derive_fields.rs
documented-test/: Cargo.toml  build.rs
documented-test/src/: attr.rs  derive.rs  documented.rs  documented_fields.rs  documented_function.rs  documented_variants.rs  lib.rs  readme.rs
documented-test/src/attr/: docs_const.rs  documented_function.rs  fail_docs_const.rs
documented-test/src/derive/: documented.rs  documented_fields.rs  documented_fields_opt.rs  documented_opt.rs  documented_variants.rs  documented_variants_opt.rs  fail_documented.rs  fail_documented_fields.rs  fail_documented_variants.rs
integration-test/: Cargo.toml
integration-test/src/: lib.rs
lib/: Cargo.toml
lib/src/: _caveats.rs  lib.rs
proc-macro/: Cargo.toml
proc-macro/src/: lib.rs
