[workspace]
members = ["lib", "documented-macros", "documented-test"]
resolver = "2"

[workspace.package]
authors = [
    "cyqsimon <28627918+cyqsimon@users.noreply.github.com>",
    "Uriel <urielfontan2002@gmail.com>",
    "Sese Mueller <sese4dasbinichagmail.com>",
]
categories = ["rust-patterns"]
edition = "2021"
keywords = ["documentation", "proc-macro", "reflection"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cyqsimon/documented"
rust-version = "1.65.0"
version = "0.7.1"
