[workspace]
members = ["lib", "documented-macros", "documented-test"]
resolver = "3"

[workspace.package]
authors = [
    "cyqsimon <28627918+cyqsimon@users.noreply.github.com>",
    "Uriel <urielfontan2002@gmail.com>",
    "Sese Mueller <sese4dasbinichagmail.com>",
    "Lauréline <git@compilin.dev>",
]
categories = ["rust-patterns"]
edition = "2021"
keywords = ["documentation", "proc-macro", "reflection"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cyqsimon/documented"
rust-version = "1.71.0"
version = "0.10.0"

[workspace.dependencies]
convert_case = "0.11.0"
documented = { path = "lib", default-features = false }
documented-macros = { path = "documented-macros", version = "0.10.0" }
itertools = "0.15.0"
optfield = "0.4.0"
phf = { version = ">=0.13, <0.15", default-features = false, features = [
    "macros",
] }
proc-macro2 = "1.0.95"
quote = "1.0.40"
strum = { version = "0.28.0", features = ["derive"] }
syn = { version = ">=2, <=3", features = ["full", "extra-traits"] }
thiserror = "2.0.12"
