[package]
description = "Derive macros for `documented`"
edition.workspace = true
license.workspace = true
name = "documented-derive"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
optfield = "0.3.0"
quote = "1.0.35"
syn = "2.0.58"

[dev-dependencies]
documented = { path = "../lib" }
