[package]
description = "Derive and attribute macros for `documented`"
edition.workspace = true
license.workspace = true
name = "documented-macros"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
optfield = { version = "0.3.0", optional = true }
proc-macro2 = "1.0.86"
quote = "1.0.35"
syn = { version = "2.0.58", features = ["full"] }

[dev-dependencies]
documented = { path = "../lib" }

[features]
customise = ["dep:optfield"]
default = ["customise"]
