[package]
description = "Derive and attribute macros for `documented`"
edition.workspace = true
license.workspace = true
name = "documented-macros"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6.0"
itertools = { version = "0.13.0", optional = true }
optfield = { version = "0.3.0", optional = true }
proc-macro2 = "1.0.86"
quote = "1.0.35"
strum = { version = "0.26.3", features = ["derive"], optional = true }
syn = { version = "2.0.58", features = ["full", "extra-traits"] }

[dev-dependencies]
documented = { path = "../lib" }

[features]
customise = ["dep:itertools", "dep:optfield", "dep:strum"]
default = ["customise"]
