[package]
authors.workspace = true
categories.workspace = true
description = "Derive and attribute macros for accessing your type's documentation at runtime"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "documented"
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
documented-macros = { path = "../documented-macros", version = "=0.9.1" }
phf = { version = "0.11", default-features = false, features = ["macros"] }
thiserror = "2.0.3"

[features]
customise = ["documented-macros/customise"]
default = ["customise"]
